@@ -3,6 +3,9 @@
     * tests/test_arc_math.c: Add random checks for geda_math_arc_shortest_distance.
       This should complete the tests for this module.
 
+    * tests/test_line_object.c: Add for loop to check_methods and random
+      starting points.
+
 2019-11-01 Wiley E. Hill <wileyhill@gmail.com>
 
     * src/object/o_circle_object.c: Add Doxygen group geda-circle-object-proc.
